--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,11 +1,12 @@
 {
     "pages": [
-       
         "pages/index/index",
         "pages/my/my",
         "pages/cart/cart",
         "pages/detail/detail",
-        "pages/errs/errs"
+        "pages/issue/issue",
+        "pages/errs/errs",
+        "pages/succ/succ"
     ],
     "window": {
         "backgroundTextStyle": "light",
