--- a/project.config.json
+++ b/project.config.json
@@ -55,7 +55,7 @@
     },
     "simulatorType": "wechat",
     "simulatorPluginLibVersion": {},
-    "appid": "wxa35dbf88d2f73c04",
+    "appid": "wxc055add4d2d04367",
     "libVersion": "2.23.4",
     "srcMiniprogramRoot": "miniprogram/",
     "editorSetting": {
