--- a/project.private.config.json
+++ b/project.private.config.json
@@ -4,5 +4,8 @@
         "compileHotReLoad": true,
         "urlCheck": false
     },
+    "useCompilerPlugins": [
+        "typescript"
+    ],
     "projectname": "partform"
 }
